<resources>
    <string name="app_name">Hipster Bait</string>
    <string name="empty_string" />
    <string name="com.twitter.sdk.android.CONSUMER_KEY">93WYb4CY9K0KIzT67TZahkzS7</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">TlI2gau4CQP6kRi2RI51O0yVng9rpwitJrmjAp4nLugrQCTqhL</string>
    <string name="google_server_client_id">87761666414-g8cqvm3913ribrej4t84rr0ncoko3s98.apps.googleusercontent.com</string>
    <string name="facebook_app_id">139767750179769</string>
    <string name="firebase">firebase</string>
    <string name="title_activity_login_menu">LoginMenuActivity</string>
    <string name="roboto_condensed">fonts/RobotoCondensed-Regular.ttf</string>
    <string name="roboto_condensed_bold">fonts/RobotoCondensed-Bold.ttf</string>
    <string name="roboto_condensed_italic">fonts/RobotoCondensed-Italic.ttf</string>
    <string name="roboto_condensed_light">fonts/RobotoCondensed-Light.ttf</string>
    <string name="roboto_condensed_bolditalic">fonts/RobotoCondensed-BoldItalic.ttf</string>
    <string name="roboto_condensed_lightitalic">fonts/RobotoCondensed-LightItalic.ttf</string>
    <string name="unarchive">Unarchive</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="close">Close</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="charts">Charts</string>
    <string name="login_register_join_us">Login / Register / Join Us</string>
    <string name="hipster_bait_artists">Hipster Bait Artists</string>
    <string name="find_cassettes">Find Cassettes</string>
    <string name="cassette_player">Cassette Player</string>
    <string name="choose_an_email_address">Choose an email address for your account.</string>
    <string name="update_email">Update Email</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="cassette_box">Cassette Box</string>
    <string name="bait">Bait</string>
    <string name="find">Find</string>
    <string name="save_changes">Save Changes</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="change_username">Change Username</string>
    <string name="points_earned">pointsEarned</string>
    <string name="date_found">dateFound</string>
    <string name="hidden">hidden</string>
    <string name="found">found</string>
    <string name="rating_given">ratingGiven</string>
    <string name="status">status</string>
    <string name="journey_ref">journeyRef</string>
    <string name="found_infos">foundInfos</string>
    <string name="user_ref">userRef</string>
    <string name="found_by">foundBy</string>
    <string name="timestamp">timestamp</string>
    <string name="description">description</string>
    <string name="image_ref">imageRef</string>
    <string name="hints">hints</string>
    <string name="action">action</string>
    <string name="address">address</string>
    <string name="cassette_ref">cassetteRef</string>
    <string name="iata_identifier">IATAIdentifier</string>
    <string name="city">city</string>
    <string name="regional">regional</string>
    <string name="country">country</string>
    <string name="song_ref">songRef</string>
    <string name="plays">plays</string>
    <string name="geo">geo</string>
    <string name="journeys">journeys</string>
    <string name="name">name</string>
    <string name="level">level</string>
    <string name="to_level">toLevel</string>
    <string name="points">points</string>
    <string name="found_text">foundText</string>
    <string name="image_name">imageName</string>
    <string name="type">type</string>
    <string name="not_found_text">notfoundText</string>
    <string name="value">value</string>
    <string name="increment">increment</string>
    <string name="rating">rating</string>
    <string name="ratings">ratings</string>
    <string name="flags">flags</string>
    <string name="file_ref">fileRef</string>
    <string name="band_ref">bandRef</string>
    <string name="bands">bands</string>
    <string name="bio">bio</string>
    <string name="cassette_model_ref">cassetteModelRef</string>
    <string name="email_list">emailList</string>
    <string name="badge">badge</string>
    <string name="announcement">announcement</string>
    <string name="user_badges">userbadges</string>
    <string name="cassette_art">cassetteArt</string>
    <string name="cover_art">coverArt</string>
    <string name="songs">songs</string>
    <string name="flagged">flagged</string>
    <string name="number">number</string>
    <string name="physical">physical</string>
    <string name="cassette_models">cassetteModels</string>
    <string name="cassettes">cassettes</string>
    <string name="user_key">userKey</string>
    <string name="point_key">pointKey</string>
    <string name="user_points">userpoints</string>
    <string name="user_ranks">userranks</string>
    <string name="avatars">avatars</string>
    <string name="thumbnail">thumbnail</string>
    <string name="email">email</string>
    <string name="images">images</string>
    <string name="music">music</string>
    <string name="cassette_description">cassetteDescription</string>
    <string name="cassette_art_ref">cassetteArtRef</string>
    <string name="cover_art_ref">coverArtworkRef</string>
    <string name="heard_them_first">heardThemFirst</string>
    <string name="username">username</string>
    <string name="firstname">fistname</string>
    <string name="lastname">lastname</string>
    <string name="avatar_image_ref">avatarImageRef</string>
    <string name="ranks">ranks</string>
    <string name="rank">rank</string>
    <string name="band">band</string>
    <string name="badges">badges</string>
    <string name="archived_cassettes">archivedCassettes</string>
    <string name="found_count">foundCount</string>
    <string name="hidden_count">hiddenCount</string>
    <string name="rating_count">ratingCount</string>
    <string name="baits_found_count">baitsFoundCount</string>
    <string name="last_find_timestamp">lastFindTimestamp</string>
    <string name="last_hide_timestamp">lastHideTimestamp</string>
    <string name="users">users</string>
    <string name="roadie">Roadie</string>
    <string name="event">event</string>
    <string name="location">location</string>
    <string name="random">random</string>
    <string name="lemmy">lemmy</string>
    <string name="fat_elvis">fat-elvis</string>
    <string name="mile_high">mile-high</string>
    <string name="david_lee">david-lee</string>
    <string name="get_in_the_van">get-in-the-van</string>
    <string name="world_tour">world-tour</string>
    <string name="hangover">hangover</string>
    <string name="first_bait">first-bait</string>
    <string name="bomber">bomber</string>
    <string name="triple_threat">triple-threat</string>
    <string name="binge_and_purge">binge-and-purge</string>
    <string name="jailbreak">jailbreak</string>
    <string name="hide_cassette">hideCassette</string>
    <string name="quick_hide">quickHide</string>
    <string name="hide_distance">hideDistance</string>
    <string name="hide_different_country">hideDifferentCountry</string>
    <string name="hint_extra">hint_extra</string>
    <string name="image_extra">image_extra</string>
    <string name="paparazzi">paparazzi</string>
    <string name="letter_pounder">letter-pounder</string>
    <string name="text_hint">textHint</string>
    <string name="photo_hint">photoHint</string>
    <string name="share_hint_facebook">shareHintFacebook</string>
    <string name="share_hint_twitter">shareHintTwitter</string>
    <string name="share_hint_instagram">shareHintInstagram</string>
    <string name="fb_share_extra">fb_share_extra</string>
    <string name="tw_share_extra">tw_share_extra</string>
    <string name="ig_share_extra">ig_share_extra</string>
    <string name="cassette_extra_name">cassette_extra_name</string>
    <string name="index_extra">index_extra</string>
    <string name="badge_notif_header">badge_notif_header</string>
    <string name="badge_notif_name">badge_notif_name</string>
    <string name="badge_notif_detail">badge_notif_detail</string>
    <string name="badge_notif_imagename">badge_notif_imagename</string>
    <string name="badge_details_imagename">badge_details_imagename</string>
    <string name="badge_details_name">badge_details_name</string>
    <string name="badge_details_detail">badge_details_detail</string>
    <string name="badge_details_timestamp">badge_details_timestamp</string>
    <string name="hb_log_tag">HB</string>
    <string name="fir_log_tag">FIR</string>
    <string name="found_info_missing_values">FoundInfo is missing required values </string>
    <string name="ref_already_set">The ref is already set</string>
    <string name="reference_not_set">The reference is not set</string>
    <string name="hint_missing_values">Hint is missing required values </string>
    <string name="play_missing_values">Play is missing required values </string>
    <string name="points_missing_values">Points is missing required values </string>
    <string name="band_missing_values">Band is missing required values </string>
    <string name="cassette_missing_values">Cassette is missing required values </string>
    <string name="cassette_model_missing_values">Cassette model is missing required values </string>
    <string name="flag_model_missing_values">Flag model is missing values </string>
    <string name="rating_missing_values">Rating model is missing values </string>
    <string name="song_model_missing_values">Song model is missing values </string>
    <string name="user_model_missing_values">User model is missing values </string>
    <string name="user_badges_missing_values">User Badges is missing values </string>
    <string name="user_points_missing_values">User Points is missing values </string>
    <string name="user_rank_missing_values">User Rank is missing values </string>
    <string name="user_missing_values">User is missing values </string>
    <string name="journey_has_malformed_values">Journey has malformed values at </string>
    <string name="journey_location_missing_error">Couldn\'t get location for Journey </string>
    <string name="rank_missing_values">Rank is missing required values </string>
    <string name="badge_missing_values">Badge is missing required values </string>
    <string name="email_required_error">An email is required.</string>
    <string name="password_required_error">A password is required.</string>
    <string name="password_mismatch_error">Passwords must match.</string>
    <string name="email_invalid_error">That email is invalid.</string>
    <string name="signup_fail_error">Sign up failed.</string>
    <string name="login_failed_message">That email and password combination is invalid.</string>
    <string name="password_changed">Password changed.</string>
    <string name="password_chagned_failed">Couldn\'t change password.</string>
    <string name="required">Required.</string>
    <string name="passwords_mismatched">Passwords must match.</string>
    <string name="name_changed">Name changed.</string>
    <string name="name_changed_failed">Couldn\'t to change name.</string>
    <string name="no_hint_image">No hint image</string>
    <string name="band_not_found">"Couldn't get band for reference "</string>
    <string name="style_parsing_failed">Style parsing failed.</string>
    <string name="cant_find_style">"Can't find style. Error: "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_current_rank">User has no current rank</string>
    <string name="locked_badge">locked_badge</string>
</resources>