<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/com.hipsterbait.android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_update_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hipsterbait.android.activities.UpdateEmailActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hb_letters_logo"
        android:id="@+id/update_email_letters_logo"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/update_email_letters_logo"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/update_email_update_email_button">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/update_email_buffer" />

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <com.hipsterbait.android.widgets.HBTextView
                android:text="@string/choose_an_email_address"
                app:typeface="robotoCondensed"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/update_email_textView7"
                android:gravity="center_horizontal" />

            <com.hipsterbait.android.widgets.HBEditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/update_email_textView7"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/update_email_email_field"
                android:background="@color/hbCharcoal30"
                android:hint="@string/email_address"
                app:typeface="robotoCondensed"
                android:textSize="20sp"
                android:textColor="@color/hbCharcoal80"
                android:textColorHint="@color/hbCharcoal80"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="4dp" />

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/update_email_buffer2" />


    </LinearLayout>

    <ImageView
        app:srcCompat="@drawable/rock_hands_black"
        android:id="@+id/update_email_rock_hands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <com.hipsterbait.android.widgets.HBButton
        android:text="@string/update_email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/update_email_update_email_button"
        android:background="@color/hbBlue"
        android:textAllCaps="false"
        app:typeface="robotoCondensed"
        android:textSize="23sp"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="updateEmailTapped" />

</RelativeLayout>
